# tokimo-perception

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
app/: config.py  main.py  schemas.py
app/models/: __init__.py  base.py  got_ocr.py  pp_chatocr.py  rapid_ocr.py
locales/: fr-FR.json  ko-KR.json  zh-CN.json
python/: Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
python/app/: config.py  main.py
python/app/models/: __init__.py  base.py  pp_chatocr.py
src/: cancel.rs  clip.rs  clip_categories.rs  config.rs  face.rs  lib.rs  main.rs  models.rs  ocr.rs  ocr_attention.rs  ocr_backend.rs  ocr_detector.rs  ocr_manager.rs  ocr_parseq.rs  ocr_trocr.rs  sidecar.rs  stt.rs  tokenizer.rs
src/worker/: mod.rs
src/worker/client/: client.rs  mod.rs  settings.rs  supervisor.rs
src/worker/protocol/: error.rs  frame.rs  mod.rs  transport.rs  types.rs
