[package]
name = "rust-models"
version = "0.1.0"
edition = "2024"
description = "OCR + CLIP + Face recognition + STT via ONNX Runtime / sherpa-onnx (library)"

[workspace]

[lib]
name = "rust_models"
path = "src/lib.rs"

[dependencies]
# Async
tokio = { version = "1", features = ["fs", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# ONNX Runtime
ort = "2.0.0-rc.12"
ndarray = "0.17"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp"] }

# Logging
tracing = "0.1"

# Memory management (malloc_trim on Linux)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# Speech-to-text (sherpa-onnx official Rust bindings, prebuilt libs auto-downloaded)
sherpa-onnx = "1.12.34"

# Audio processing
hound = "3.5"

# Stream utilities
futures-util = "0.3"

# Model download
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
