[package]
name = "tokimo-perception"
version = "0.1.0"
edition = "2024"
description = "OCR + CLIP + Face recognition + STT via ONNX Runtime / sherpa-onnx (library)"


[lib]
name = "tokimo_perception"
path = "src/lib.rs"

[dependencies]
# Async
tokio = { version = "1", features = ["fs", "sync", "net", "io-util", "macros", "rt", "rt-multi-thread", "time", "signal", "process"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
rmp-serde = "1"
base64 = "0.22"
bytes = "1"
thiserror = "2"

# HTTP glue (for worker protocol transport)
http-body-util = "0.1"

# ONNX Runtime
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "load-dynamic", "api-24"] }
ndarray = "0.17"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp"] }

# Logging
tracing = "0.1"

# Speech-to-text (sherpa-onnx official Rust bindings, prebuilt libs auto-downloaded)
sherpa-onnx = "1.12.34"

# Audio processing
hound = "3.5"

# Stream utilities
futures-util = "0.3"

# Model download
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json"] }
rust-client-api = { path = "../rust-client-api" }
zip = { version = "8", default-features = false, features = ["deflate"] }

# Worker protocol transports need these for HTTP helper types
# (reqwest already enables rustls above)

# --- Worker binary (tokimo-perception-worker) deps ---
axum = { version = "0.8", features = ["macros", "ws"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace"] }
async-stream = "0.3"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

# --- Worker client + supervisor deps ---
arc-swap = "1"
parking_lot = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
# Memory management (malloc_trim on Linux)
libc = "0.2"

[lints]
workspace = true
