[project]
name = "tokimo-python-ocr"
version = "0.1.0"
description = "VLM-based OCR sidecar service for Tokimo"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "Pillow>=10.0",
    "numpy>=1.26",
    "torch>=2.1",
    "transformers>=4.40",
    "accelerate>=1.13.0",
    "wordninja>=2.0",
    "pyspellchecker>=0.8",
]

[project.optional-dependencies]
paddle = [
    "paddlepaddle-gpu>=3.0",
    "paddleocr>=3.0",
]

[project.scripts]
serve = "uvicorn app.main:app --host 0.0.0.0 --port 5679"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
]

[[tool.uv.index]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"
explicit = true

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddlepaddle" }

[tool.uv]
override-dependencies = [
    "nvidia-nccl-cu12>=2.28",
]
